# transformers

./: README.md  run_setup.sh  setup.py
4bit_quantization/: CMakeLists.txt  core.py  matmul.py  modules.py  pythonInterface.cpp
4bit_quantization/csrc/: kernels.cu  kernels.cuh  ops.cu
cuda/: fused_mlp.cu
src/transformers/integrations/: bitsandbytes.py
src/transformers/models/llama/: modeling_llama.py
src/transformers/triton/: rope.py
triton/: compiled_mlp.py  triton_mlp_bf16.py
unit_tests/: run_test.sh  test_fused_mlp.py
